--- a/src/components/BusForm/BusForm.css
+++ b/src/components/BusForm/BusForm.css
@@ -39,16 +39,7 @@
   margin-bottom: 15px;
 }
 
-/* We don't need these specific flex properties anymore because grid handles the layout */
-/* .bus-segment-headers > span:nth-child(1),
-.bus-segment-headers > span:nth-child(2),
-.bus-segment-headers > span:nth-child(3) {
-  text-align: left;
-}
 
-.bus-segment-headers > span:last-child {
-  text-align: left;
-} */
 
 .form-group {
   margin-bottom: 0;
@@ -68,6 +59,7 @@
   border-radius: 4px;
   font-size: 14px;
   transition: border-color 0.2s;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .input-with-icon input:focus,
@@ -122,8 +114,7 @@
   text-decoration: underline;
 }
 
-/* These widths are now handled by grid-template-columns,
-   but can be kept for fallback or specific adjustments */
+
 .city-select-from,
 .city-select-to,
 .date-input,
